--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                               <swiper-container class="mySwiper" pagination="true" pagination-clickable="true"
                                         navigation="true" space-between="30" autoplay-delay="2500"
                                         autoplay-disabled-on-interaction="false">
-                                        <swiper-slide>
+                                        <swiper-slide class="swiper-slide">
                                                   <div class="featured-content"
                                                             style="background: linear-gradient(to bottom, rgba(0,0,0,0), #151515) ,url('/content-images/Web-Series/Money-Heist-S3.jpg');">
                                                             <span class="featured-title">Money Heist Money Heist Money
@@ -79,7 +79,7 @@
                                                                                           adipisci quibusdam facilis et
                                                                                           eligendi
                                                                                           illo voluptate odio
-                                                                                          voluptates,<span id="span1"></span>
+                                                                                          voluptates,<span id="span1">...</span>
                                                                                           <span class="mybox1" id="mybox1id">
                                                                                                     reum cupiditate
                                                                                                     temporibus adipisci
@@ -102,7 +102,7 @@
                                                                                                     temporibus adipisci
                                                                                                     quibusdam
                                                                                           </span>
-                                                                                          <button class="read-more-btn" id="mybuttonid" onclick="changeReadMore()">read more...</button>
+                                                                                          <button class="read-more-btn" id="mybuttonid" onclick="changeReadMore()">read more</button>
                                                                                 </p>
                                                                       </div>
                                                             </div>
@@ -127,7 +127,7 @@
                                                                                           adipisci quibusdam facilis et
                                                                                           eligendi
                                                                                           illo voluptate odio
-                                                                                          voluptates,<span id="span1"></span>
+                                                                                          voluptates,<span id="span1">...</span>
                                                                                           <span class="mybox1" id="mybox1id">
                                                                                                     reum cupiditate
                                                                                                     temporibus adipisci
@@ -150,7 +150,7 @@
                                                                                                     temporibus adipisci
                                                                                                     quibusdam
                                                                                           </span>
-                                                                                          <button class="read-more-btn" id="mybuttonid" onclick="changeReadMore()">read more...</button>
+                                                                                          <button class="read-more-btn" id="mybuttonid" onclick="changeReadMore2()">read more</button>
                                                                                 </p>
                                                                       </div>
                                                             </div>
