--- a/Login_and_Sign-up/registration.html
+++ b/Login_and_Sign-up/registration.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <img src="../AAH-Universe_Website/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
+    <img src="/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
     <div class="box">
         <form action="">
             <h2>Sign In</h2>
@@ -25,7 +25,7 @@
             <input type="submit" value="Login">
             <div class="links">
                 <a href="#">Forgot Password?</a>
-                <a href="#">SingUp</a>
+                <a href="/Login_and_Sign-up\signup_form.html">SingUp</a>
             </div>
             
 
