--- a/main/index.html
+++ b/main/index.html
@@ -41,7 +41,7 @@
                                                   <i class="fa-regular fa-circle-down"></i>
                                         </div>
                                         <div>
-                                                  <button class="login-btn">Login</button>
+                                                  <button class="login-btn active" onclick="loginpage()">Login</button>
                                         </div>
 
                               </div>
