--- a/registration/sf.html
+++ b/registration/sf.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="fs.css">
 </head>
 <body>
+    <video autoplay muted loop id="myVideo">
+        <source src="https://cdn.dribbble.com/uploads/48226/original/b8bd4e4273cceae2889d9d259b04f732.mp4?1689028949.mp4" type="video/mp4">
+    </video>
+    
     <div class="box">
         <form>
             <h2>Registration</h2>
