--- a/Login/Forget.html
+++ b/Login/Forget.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <img src="../AAH-Universe_Website/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
+    <img src="/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
     <div class="box">
         <form action="">
             <h2><b>Forget Something?</b></h2>
