--- a/registration.html
+++ b/registration.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <img src="../AAH-Universe_Website/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
+    <img src="/AAH UNIVERSE.png" height="180px"class="registrationImg">
     <div class="box">
         <form action="">
             <h2>Sign In</h2>
@@ -25,7 +25,7 @@
             <input type="submit" value="Login">
             <div class="links">
                 <a href="http://127.0.0.1:5500/Forget.html?">Forgot Password?</a>
-                <a href="http://127.0.0.1:5500/AAH-Universe_Website/Login&Sign-up/signup_form.html">SingUp</a>
+                <a href="http://127.0.0.1:5500/registration/sf.html">SingUp</a>
             </div>
             
 
