--- a/main/index_anime.html
+++ b/main/index_anime.html
@@ -24,8 +24,8 @@
                                                   <li class="menu-list-item" onclick="moviepage()">Movies</li>
                                                   <li class="menu-list-item" onclick="seriespage()">Series</li>
                                                   <li class="menu-list-item active" onclick="animepage()">Anime</li>
-                                                  <li class="menu-list-item" onclick="">Popular</li>
-                                                  <li class="menu-list-item" onclick="">Trends</li>
+                                                  <li class="menu-list-item" onclick="popularpage()">Popular</li>
+                                                  <li class="menu-list-item" onclick="trendpage()">Trends</li>
 
                                         </ul>
                               </div>
