--- a/Login/Forgett.html
+++ b/Login/Forgett.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <img src="/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
+    <img src="/Images/Project_Logo-removebg-preview.png" height="180px"class="registrationImg">
     <div class="box">
         <form action="">
             <h2><b>Forget Something?</b></h2>
@@ -22,7 +22,7 @@
             <input type="checkbox" class="forget" name="forget"  value="Remember">
             <label for="forget" class="forget">Remember me</label><br><br>
             </div><br>
-            <p class="account">Don't have an account?</p> <a href="http://127.0.0.1:5500/AAH-Universe_Website/registration.html?#" class="rester">Login</a>
+            <p class="account">Don't have an account?</p> <a href="/Login/registration.html" class="rester">Login</a>
         </form>
     </div>
 </body>
