--- a/Login/registration.html
+++ b/Login/registration.html
@@ -8,11 +8,7 @@
 
 </head>
 <body>
-<<<<<<< HEAD:registration.html
-    <img src="/AAH UNIVERSE.png" height="180px"class="registrationImg">
-=======
-    <img src="/Images/AAH UNIVERSE.png" height="180px"class="registrationImg">
->>>>>>> ae727502cf44743cdab3a939b5ace5b0fd6a5bcc:Login/registration.html
+    <img src="/Login/AAH UNIVERSE.png" height="180px"class="registrationImg">
     <div class="box">
         <form action="">
             <h2>Sign In</h2>
