--- a/Login/registration.html
+++ b/Login/registration.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <img src="/Login/AAH UNIVERSE.png" height="180px"class="registrationImg">
+    <!-- <img src="/Images/Project_Logo-removebg-preview.png" height="180px"class="registrationImg"> -->
     <div class="box">
         <form action="">
             <h2>Sign In</h2>
@@ -24,8 +24,8 @@
             </div>
             <input type="submit" value="Login">
             <div class="links">
-                <a href="http://127.0.0.1:5500/Forget.html?">Forgot Password?</a>
-                <a href="http://127.0.0.1:5500/registration/sf.html">SingUp</a>
+                <a href="/Login/Forgett.html">Forgot Password?</a>
+                <a href="/registration/sf.html">SingUp</a>
             </div>
             
 
