--- a/main/index_anime.html
+++ b/main/index_anime.html
@@ -27,13 +27,13 @@
                                                   <li class="menu-list-item" onclick="homepage()">Home
                                                             <!-- <a href="/main/index.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item active" onclick="moviepage()">Movies
+                                                  <li class="menu-list-item" onclick="moviepage()">Movies
                                                             <!-- <a href="/main/index_movie.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="seriespage()">Series
                                                             <!-- <a href="/main/index_series.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="animepage()">Anime
+                                                  <li class="menu-list-item active" onclick="animepage()">Anime
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="popularpage()">Popular</li>
