--- a/main/index_movie.html
+++ b/main/index_movie.html
@@ -411,7 +411,7 @@
                                                                       </div>
                                                                       <!-- <p class="movie-list-item-desc"></p> -->
                                                                       <button
-                                                                                class="movie-list-item-button">WATCH</button>
+                                                                                class="movie-list-item-button" onclick="badboysrideordie()">WATCH</button>
                                                             </div>
                                                             <div class="movie-list-item">
                                                                       <img class="movie-list-item-img"
