--- a/main/index_trend.html
+++ b/main/index_trend.html
@@ -27,7 +27,7 @@
                                                   <li class="menu-list-item" onclick="homepage()">Home
                                                             <!-- <a href="/main/index.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item active" onclick="moviepage()">Movies
+                                                  <li class="menu-list-item" onclick="moviepage()">Movies
                                                             <!-- <a href="/main/index_movie.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="seriespage()">Series
@@ -37,7 +37,7 @@
                                                             <!-- <a href="/main/index_anime.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="popularpage()">Popular</li>
-                                                  <li class="menu-list-item" onclick="trendpage()">Trends</li>
+                                                  <li class="menu-list-item active" onclick="trendpage()">Trends</li>
 
                                         </ul>
                               </div>
