updating through git due to error in vscode

--- a/main/index_movie.html
+++ b/main/index_movie.html
@@ -174,23 +174,26 @@
 
                                         <swiper-slide>
                                                   <div class="featured-content"
-                                                            style="background: linear-gradient(to bottom, rgba(0,0,0,0), #151515) ,url('/content-images/Slider_Image/Code-8.jpg');">
-                                                            <span class="featured-title">Code 8</span>
-                                                            <p class="featured-desc">A super-powered construction worker
-                                                                      falls in with a group of criminals in order to
-                                                                      raise the funds to help his ill mother.
+                                                            style="background: linear-gradient(to bottom, rgba(0,0,0,0), #151515) ,url('/content-images/Slider_Image/Code-8_part-2.jpg');">
+                                                            <span class="featured-title">Code 8: Part II</span>
+                                                            <p class="featured-desc">Follows a girl fighting to get
+                                                                      justice for her brother who was slain by corrupt
+                                                                      police officers. She enlists the help of an ex-con
+                                                                      and his former partner to face off against a
+                                                                      highly regarded and well-protected police
+                                                                      sergeant.
                                                             <div class="featured-details">
                                                                       <!-- <h6>TV Series</h6> -->
-                                                                      <h5 id="gen">Action | Crime | </h5>
+                                                                      <h5 id="gen">Action | Crime | Sci-Fi</h5>
                                                                       <h4>2019</h4>
                                                                       <h3 id="rate">
                                                                                 <span>IMDB</span><i
-                                                                                          class="bi bi-star-fill"></i>6.1
+                                                                                          class="bi bi-star-fill"></i>5.7
                                                                                 /10
                                                                                 </p>
                                                                       </h3>
                                                             </div>
-                                                            <button class="featured-button">WATCH
+                                                            <button class="featured-button" onclick="code8part2()">WATCH
                                                                       <i class="bi bi-play-btn"></i>
                                                             </button>
                                                   </div>
@@ -301,8 +304,8 @@
                                                                                 </p>
                                                                       </h3>
                                                             </div>
-                                                            <button class="featured-button">WATCH<i
-                                                                                class="bi bi-play-btn"></i>
+                                                            <button class="featured-button">WATCH
+                                                                      <i class="bi bi-play-btn"></i>
                                                             </button>
                                                   </div>
                                         </swiper-slide>
@@ -410,8 +413,8 @@
                                                                                 </h3>
                                                                       </div>
                                                                       <!-- <p class="movie-list-item-desc"></p> -->
-                                                                      <button
-                                                                                class="movie-list-item-button" onclick="badboysrideordie()">WATCH</button>
+                                                                      <button class="movie-list-item-button"
+                                                                                onclick="badboysrideordie()">WATCH</button>
                                                             </div>
                                                             <div class="movie-list-item">
                                                                       <img class="movie-list-item-img"
@@ -1083,7 +1086,7 @@
 
 
 
-          <script src="app.js"></script>
+          <script src="app.js" defer></script>
 </body>
 
 </html>
