--- a/main/Video_playback/movies/code-8_part-2.html
+++ b/main/Video_playback/movies/code-8_part-2.html
@@ -8,6 +8,7 @@
           <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Sen:wght@500&display=swap"
                     rel="stylesheet">
           <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+          <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
           <link rel="stylesheet"
                     href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
@@ -28,7 +29,7 @@
                                                   <li class="menu-list-item" onclick="homepage()">Home
                                                             <!-- <a href="/main/index.html"></a> -->
                                                   </li>
-                                                  <li class="menu-list-item" onclick="moviepage()">Movies
+                                                  <li class="menu-list-item active" onclick="moviepage()">Movies
                                                             <!-- <a href="/main/index_movie.html"></a> -->
                                                   </li>
                                                   <li class="menu-list-item" onclick="seriespage()">Series
@@ -88,7 +89,7 @@
 
           <div class="videoplayback-container">
                     <div class="videoplayback-heading">
-                              <h5>AAH Universe | Movie | Bad Boys: Ride Or Die</h5>
+                              <h5>AAH Universe | Movie | Code 8: Part-II</h5>
                     </div>
 
                     <div class="video-container">
@@ -103,24 +104,21 @@
                     </div>
 
                     <div class="video-content-details">
-                              <img class="content-image" src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
-                              
+                              <img class="content-image" src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+
                               <div class="content-details">
-                                        <h2>Bad Boys: Ride Or Die</h2>
-                                        <h5>2024 | Movie | 1h 55m</h5>
+                                        <h2>Code 8: Part-II</h2>
+                                        <h5>2024 | Movie | 1h 40m</h5>
                                         <div class="content-desc">
-                                                  Arthur Fleck, a party clown and a
-                                                  failed stand-up comedian, leads an impoverished
-                                                  life with his ailing mother. However, when society
-                                                  shuns him and brands him as a freak, he decides to
-                                                  embrace the life of crime and chaos in Gotham
-                                                  City.
+                                                  Follows a girl fighting to get justice for her brother who was slain
+                                                  by corrupt police officers. She enlists the help of an ex-con and his
+                                                  former partner to face off against a highly regarded and
+                                                  well-protected police sergeant.
                                         </div>
                                         <div class="movie-details">
-                                                  <h5 id="gen">Action | Adventure | Comedy</h5>
+                                                  <h5 id="gen">Action | Crime | Sci-Fi</h5>
                                                   <h3 id="rate">
-                                                            <span>IMDB</span><i
-                                                                      class="bi bi-star-fill"></i>7
+                                                            <span>IMDB</span><i class="bi bi-star-fill"></i>5.7
                                                             / 10
                                                             </p>
                                                   </h3>
@@ -133,18 +131,10 @@
                     </div>
                     <div class="castmembers-director">
                               <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                        <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                         <span>
-                                                  <h4>Adil El Arbi</h4>
-                                                  <h2>Director | Producer | Writer</h2>
-                                        </span>
-                              </div>
-
-                              <div class="castmembers-details">
-                                        <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
-                                        <span>
-                                                  <h4>Bilall Fallah</h4>
-                                                  <h2>Director | Actor | Producer</h2>
+                                                  <h4>Jeff Chan</h4>
+                                                  <h2>Director | Writer | Producer</h2>
                                         </span>
                               </div>
                     </div>
@@ -155,28 +145,46 @@
                     <div class="castmembers-writers">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Chris Bremner</h4>
-                                                            <h2>Writer | Actor | Producer</h2>
+                                                            <h4>Jeff Chan</h4>
+                                                            <h2>Director | Writer | Producer</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Will Beall</h4>
-                                                            <h2>Writer | Additional Crew | Producer</h2>
+                                                            <h4>Chris Pare</h4>
+                                                            <h2>Writer</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>George Gallo</h4>
-                                                            <h2>Writer | Producer</h2>
+                                                            <h4>Sherren Lee</h4>
+                                                            <h2>Writer</h2>
+                                                  </span>
+                                        </div>
+
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <span>
+                                                            <h4>Jesse LaVercombe</h4>
+                                                            <h2>Writer</h2>
+                                                  </span>
+                                        </div>
+                              </span>
+
+                              <span>
+                                        <div class="castmembers-details">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
+                                                  <span>
+                                                            <h4>Tom Selenow</h4>
+                                                            <h2>Writer</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -190,18 +198,18 @@
                     <div class="castmembers-cast">
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>will Smith</h4>
-                                                            <h2>As Mike Lowrey</h2>
+                                                            <h4>Robbie Amell</h4>
+                                                            <h2>As Connor</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Martin Lawrence</h4>
-                                                            <h2>As Marcus Burnett</h2>
+                                                            <h4>Stephen Amell</h4>
+                                                            <h2>As Garrett</h2>
                                                   </span>
                                         </div>
 
@@ -209,28 +217,28 @@
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Vanessa Hudgens</h4>
-                                                            <h2>As Kelly</h2>
+                                                            <h4>Alex Mallari Jr.</h4>
+                                                            <h2>As Sergeant 'King' Kingston</h2>
                                                   </span>
                                         </div>
 
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Alexander Ludwig</h4>
-                                                            <h2>As Dorn</h2>
+                                                            <h4>Sirena Gulamgaus</h4>
+                                                            <h2>As Pavani</h2>
                                                   </span>
                                         </div>
                               </span>
 
                               <span>
                                         <div class="castmembers-details">
-                                                  <img src="/content-images/Movies/Bad-Boys-Ride_or_Die.jpg" alt="">
+                                                  <img src="/content-images/Movies/Code-8_part-2.jpg" alt="">
                                                   <span>
-                                                            <h4>Paola Núñez</h4>
-                                                            <h2>As Rita(as Paola Nuñez)</h2>
+                                                            <h4>Aaron Abrams</h4>
+                                                            <h2>As Detective Davis</h2>
                                                   </span>
                                         </div>
                               </span>
@@ -260,11 +268,11 @@
                     <div class="endbar-copyright">
                               <i class="fa-regular fa-copyright"></i>aahuniverse.com
                     </div>
-
           </div>
 
+
           <!-- <script src="app.js"></script> -->
-          <script src="/main/Video_playback/app_video.js"></script>
+          <script src="/main/Video_playback/app_video.js" defer></script>
 </body>
 
 </html>
